--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
       "prebuild": "rimraf dist",
       "build": "nest build",
       "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-      "start": "ts-node src/index.ts",
+      "start": "ts-node src/main.ts",
       "dev": "nodemon --config nodemon.json",
       "start:debug": "nest start --debug --watch",
       "start:prod": "node dist/main",
