--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
    "dependencies": {
       "@nestjs/common": "^6.10.14",
       "@nestjs/core": "^6.10.14",
+      "@nestjs/jwt": "^7.0.0",
       "@nestjs/passport": "^6.2.0",
       "@nestjs/platform-express": "^6.10.14",
       "@nestjs/swagger": "^4.3.2",
@@ -49,6 +50,7 @@
       "@types/morgan": "^1.9.0",
       "@types/node": "^8.0.29",
       "@types/passport": "^1.0.3",
+      "@types/passport-jwt": "^3.0.3",
       "@types/supertest": "^2.0.8",
       "@typescript-eslint/eslint-plugin": "^2.12.0",
       "@typescript-eslint/parser": "^2.12.0",
