--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
       "@nestjs/swagger": "^4.3.2",
       "@nestjs/typeorm": "^6.3.3",
       "bcryptjs": "^2.4.3",
+      "class-transformer": "^0.2.3",
       "class-validator": "^0.11.0",
       "morgan": "^1.9.1",
       "mysql": "^2.14.1",
